# DynamicStruct

./: pyproject.toml
dynamicstruct/: __init__.py  dynamicstruct.py  schemas.py
